# stack_machine

./: .gitignore  Cargo.toml  README.md  README_old_v1.md  Timing.md  _config.yml  assembly.md  bus_arbiter.md  call_stack.md  circuitverse_simulation_2024_6_29.cv  circuitverse_simulation_2024_8_11.cv  circuitverse_simulation_2024_8_2.cv  compiled_language.md  computer_supports.20250228-202431.FCBak  computer_supports.20250307-152535.FCBak  computer_supports.FCStd  control_unit.md  fabio_grant_loi.txt  godzilla_parts_list.txt  hardware_functions.md  issues.md  language.md  music_delay_table_generator.py  parts_ordering.txt  program_examples.md  progress_table.md  simple_demo.cv  simple_example.json  wavedrom_sources.md
arduino_program_uploader/: arduino_program_uploader.ino
assembler_config/: assembler_config_v1.json  assembler_config_v2.json  config.json
assembly_sources/: alu_test_shift  bit_shift  brushless_motor  counter_write_loop.txt  display_face  display_image_template  display_name  display_speed_test  display_test  display_test_point  display_test_point_hardware_debug  display_test_single_driver  display_wpi  fibonacci  function_test  gpio_echo  gpram_instruction_loading_test  gpram_program  gpram_test  gpram_test_simple  interrupt_and_timers_test  interrupt_test  nyan_cat  offset_read_write  pong  pong_for_faulty_stack  push_pop  record_and_play  rickroll  shift_game_complicated  starwars  stepper_motor  stepper_music  stepper_music_direct_lookup  stepper_simple  test.txt  tetris  tetris_optimized  tetris_optimized_faulty_stack  tetris_optimized_level_triggered_faulty_stack
cad/: #auto_saved_files#  cad.kicad_prl  cad.kicad_pro  cad.kicad_sch  custom_symbol_lib.bak  custom_symbol_lib.kicad_sym  fp-info-cache  fp-lib-table
clock_source/: clock_source.ino
hardware_docs/: GPRAM_controller.md  (+7 more)
(+501 files in other folders)
