[package]
name = "stack_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["emulator_debug"]
emulator_debug = []

[dependencies]
serde = {version = "1.0.197", features = ["derive", "rc"]}
serde_json = "1.0.114"
hex = "0.4.3"