[package]
name = "stack_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://stackoverflow.com/questions/26946646/package-with-both-a-library-and-a-binary
[lib]
name = "stack_machine"
path = "src/lib.rs"

[[bin]]
name = "stack_machine"
path = "src/bin.rs"

[features]
default = ["version_1"]#"replicate_stack_issue", "emulator_debug"]
emulator_debug = []
replicate_stack_issue = []

# For supporting either hardware version 1 or 2. exactly one must be enabled
version_1 = []
version_2 = []

[dependencies]
serde = {version = "1.0.197", features = ["derive", "rc"]}
serde_json = "1.0.114"
hex = "0.4.3"
serialport = "4.2.1"
dialoguer = "0.11.0"
eframe = "0.30.0"